# allocators

./: .gitignore  CMakeLists.txt  README.md
lib/pool/: pool.c  pool.h
